--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "shootgame",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +15,5 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
   }
 }
