--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "shootgame",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2",
-    "nodemon": "^3.1.4",
-    "socket.io": "^4.7.5"
-  },
-  "devDependencies": {
-  }
+    "name": "shootgame",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.19.2",
+        "nodemon": "^3.1.4",
+        "socket.io": "^4.7.5"
+    },
+    "devDependencies": {}
 }
